(maint) Add ability to specify a ref to compare against
This change allows the GitHub action workflow to specify a specific
reference to be used when finding files to send to the language server.

This allows the the languagetool check to use less time by only compare
any new or changed files, instead of running all of the files in the
repository through the language server.

Additional work is needed for repositories after this change is merged.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,6 +27,20 @@ jobs:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-check
           level: info
+  test-pr-change-check:
+    if: github.event_name == 'pull_request'
+    name: runner / languagetool (github-pr-check) (Changed)
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: ./
+        with:
+          github_token: ${{ secrets.github_token }}
+          reporter: github-pr-check
+          level: info
+          base_ref: develop
 
   test-pr-review:
     if: github.event_name == 'pull_request'
